{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 931,
  "lineage": "d8ff1649-f753-ddd9-41fa-e2a6d490ca9d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_NAT_gatway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b71ffee60ac43c09",
            "association_id": "eipassoc-0245c32e53c567264",
            "domain": "vpc",
            "id": "eipalloc-0b71ffee60ac43c09",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ffb0e66b3ac0f2fd",
            "private_dns": "ip-10-0-1-71.ec2.internal",
            "private_ip": "10.0.1.71",
            "public_dns": "ec2-52-44-32-180.compute-1.amazonaws.com",
            "public_ip": "52.44.32.180",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "project-1-instance-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-080e1f13689e07408",
            "arn": "arn:aws:ec2:us-east-1:891377254556:instance/i-0bb41fdea784604ff",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bb41fdea784604ff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "FebruaryKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d43d7fe50676757d",
            "private_dns": "ip-10-0-2-239.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.239",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0eebb1fdc800829db",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0eab94541ad9e7b2b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e74d25d690f6a1c0",
            "tags": {
              "Name": "instance-1-dev"
            },
            "tags_all": {
              "Name": "instance-1-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eab94541ad9e7b2b"
            ]
          },
          "dependencies": [
            "aws_security_group.project-1-SG-2",
            "aws_subnet.project-1-subnet-3",
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "project-1-instance-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-080e1f13689e07408",
            "arn": "arn:aws:ec2:us-east-1:891377254556:instance/i-063813dfef14c371f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-063813dfef14c371f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "FebruaryKey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-074c8a7516b3ddfa1",
            "private_dns": "ip-10-0-3-111.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.111",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00a8477d7bba74cc3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0eab94541ad9e7b2b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0125b48787a78820d",
            "tags": {
              "Name": "instance-2-dev"
            },
            "tags_all": {
              "Name": "instance-2-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0eab94541ad9e7b2b"
            ]
          },
          "dependencies": [
            "aws_security_group.project-1-SG-2",
            "aws_subnet.project-1-subnet-4",
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project-1-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377254556:internet-gateway/igw-0641a6c2315df3cbf",
            "id": "igw-0641a6c2315df3cbf",
            "owner_id": "891377254556",
            "tags": {
              "Name": "internet-gateway-dev"
            },
            "tags_all": {
              "Name": "internet-gateway-dev"
            },
            "vpc_id": "vpc-021d1865813f80cbf"
          },
          "dependencies": [
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "project-1-loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377254556:loadbalancer/app/load-balancer-dev/eb6151380a4f4ae2",
            "arn_suffix": "app/load-balancer-dev/eb6151380a4f4ae2",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "load-balancer-dev-106498880.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377254556:loadbalancer/app/load-balancer-dev/eb6151380a4f4ae2",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "load-balancer-dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fa6b16edfc1431b6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0239851fcdef7ca07"
              },
              {
                "subnet_id": "subnet-0994458d3a8adc5e0"
              }
            ],
            "subnets": [
              "subnet-0239851fcdef7ca07",
              "subnet-0994458d3a8adc5e0"
            ],
            "vpc_id": "vpc-021d1865813f80cbf",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.project-1-SG-1",
            "aws_subnet.project-1-subnet-1",
            "aws_subnet.project-1-subnet-2",
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377254556:listener/app/load-balancer-dev/eb6151380a4f4ae2/b5d30cb692fa0b80",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891377254556:targetgroup/target-group-dev/9c34ff746c27c388",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377254556:listener/app/load-balancer-dev/eb6151380a4f4ae2/b5d30cb692fa0b80",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:891377254556:loadbalancer/app/load-balancer-dev/eb6151380a4f4ae2",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.project-1-loadbalancer",
            "aws_lb_target_group.project-1-targetgroup",
            "aws_security_group.project-1-SG-1",
            "aws_subnet.project-1-subnet-1",
            "aws_subnet.project-1-subnet-2",
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "project-1-targetgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377254556:targetgroup/target-group-dev/9c34ff746c27c388",
            "arn_suffix": "targetgroup/target-group-dev/9c34ff746c27c388",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377254556:targetgroup/target-group-dev/9c34ff746c27c388",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target-group-dev",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-021d1865813f80cbf"
          },
          "dependencies": [
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "project-1-attach1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377254556:targetgroup/target-group-dev/9c34ff746c27c388-20240429051647060100000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891377254556:targetgroup/target-group-dev/9c34ff746c27c388",
            "target_id": "i-0bb41fdea784604ff"
          },
          "dependencies": [
            "aws_instance.project-1-instance-1",
            "aws_lb_target_group.project-1-targetgroup",
            "aws_security_group.project-1-SG-2",
            "aws_subnet.project-1-subnet-3",
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "project-1-attach2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377254556:targetgroup/target-group-dev/9c34ff746c27c388-20240429051657675700000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891377254556:targetgroup/target-group-dev/9c34ff746c27c388",
            "target_id": "i-063813dfef14c371f"
          },
          "dependencies": [
            "aws_instance.project-1-instance-2",
            "aws_lb_target_group.project-1-targetgroup",
            "aws_security_group.project-1-SG-2",
            "aws_subnet.project-1-subnet-4",
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "project-1-NAT-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b71ffee60ac43c09",
            "association_id": "eipassoc-0245c32e53c567264",
            "connectivity_type": "public",
            "id": "nat-0219718bb03435fe7",
            "network_interface_id": "eni-0ffb0e66b3ac0f2fd",
            "private_ip": "10.0.1.71",
            "public_ip": "52.44.32.180",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0239851fcdef7ca07",
            "tags": {
              "Name": "NAT-Gateway-dev"
            },
            "tags_all": {
              "Name": "NAT-Gateway-dev"
            }
          },
          "dependencies": [
            "aws_eip.eip_NAT_gatway",
            "aws_internet_gateway.project-1-igw",
            "aws_subnet.project-1-subnet-1",
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_subnet_route_to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08cf9e08b3ba36f871080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0219718bb03435fe7",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08cf9e08b3ba36f87",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip_NAT_gatway",
            "aws_internet_gateway.project-1-igw",
            "aws_nat_gateway.project-1-NAT-gateway",
            "aws_route_table.project-1-RT-1",
            "aws_subnet.project-1-subnet-1",
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project-1-RT-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377254556:route-table/rtb-08cf9e08b3ba36f87",
            "id": "rtb-08cf9e08b3ba36f87",
            "owner_id": "891377254556",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0219718bb03435fe7",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table-dev-private"
            },
            "tags_all": {
              "Name": "route-table-dev-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-021d1865813f80cbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "project-1-RT-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377254556:route-table/rtb-00b2cde8218f63bbf",
            "id": "rtb-00b2cde8218f63bbf",
            "owner_id": "891377254556",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0641a6c2315df3cbf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route-table-dev-public"
            },
            "tags_all": {
              "Name": "route-table-dev-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-021d1865813f80cbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.project-1-igw",
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project-1-RTA-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0902c7e40c6b37a19",
            "route_table_id": "rtb-00b2cde8218f63bbf",
            "subnet_id": "subnet-0239851fcdef7ca07"
          },
          "dependencies": [
            "aws_internet_gateway.project-1-igw",
            "aws_route_table.project-1-RT-2",
            "aws_subnet.project-1-subnet-1",
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project-1-RTA-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea989967cd6bf24d",
            "route_table_id": "rtb-00b2cde8218f63bbf",
            "subnet_id": "subnet-0994458d3a8adc5e0"
          },
          "dependencies": [
            "aws_internet_gateway.project-1-igw",
            "aws_route_table.project-1-RT-2",
            "aws_subnet.project-1-subnet-2",
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project-1-RTA-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a42d010d1efe06e4",
            "route_table_id": "rtb-08cf9e08b3ba36f87",
            "subnet_id": "subnet-0e74d25d690f6a1c0"
          },
          "dependencies": [
            "aws_route_table.project-1-RT-1",
            "aws_subnet.project-1-subnet-3",
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "project-1-RTA-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00bad07214b910c86",
            "route_table_id": "rtb-08cf9e08b3ba36f87",
            "subnet_id": "subnet-0125b48787a78820d"
          },
          "dependencies": [
            "aws_route_table.project-1-RT-1",
            "aws_subnet.project-1-subnet-4",
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project-1-SG-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377254556:security-group/sg-0fa6b16edfc1431b6",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa6b16edfc1431b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "project-1-SG-public",
            "name_prefix": "",
            "owner_id": "891377254556",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-group-dev-public"
            },
            "tags_all": {
              "Name": "security-group-dev-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-021d1865813f80cbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project-1-SG-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377254556:security-group/sg-0eab94541ad9e7b2b",
            "description": "Security group for private subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eab94541ad9e7b2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "project-1-SG-private",
            "name_prefix": "",
            "owner_id": "891377254556",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "security-group-dev-private"
            },
            "tags_all": {
              "Name": "security-group-dev-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-021d1865813f80cbf"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project-1-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377254556:subnet/subnet-0239851fcdef7ca07",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0239851fcdef7ca07",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377254556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-021d1865813f80cbf"
          },
          "dependencies": [
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project-1-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377254556:subnet/subnet-0994458d3a8adc5e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0994458d3a8adc5e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377254556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-021d1865813f80cbf"
          },
          "dependencies": [
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project-1-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377254556:subnet/subnet-0e74d25d690f6a1c0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e74d25d690f6a1c0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377254556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-021d1865813f80cbf"
          },
          "dependencies": [
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "project-1-subnet-4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377254556:subnet/subnet-0125b48787a78820d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0125b48787a78820d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377254556",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-021d1865813f80cbf"
          },
          "dependencies": [
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project-1-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377254556:vpc/vpc-021d1865813f80cbf",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08651927da28bff46",
            "default_route_table_id": "rtb-07110f440b905923e",
            "default_security_group_id": "sg-0ec36b4dd185bb795",
            "dhcp_options_id": "dopt-01b83ec105c9758a6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-021d1865813f80cbf",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07110f440b905923e",
            "owner_id": "891377254556",
            "tags": {
              "Name": "project-1-vpc-dev"
            },
            "tags_all": {
              "Name": "project-1-vpc-dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "SG-1-All",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377254556:security-group-rule/sgr-0ae480c1c6a954d83",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ae480c1c6a954d83",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fa6b16edfc1431b6",
            "security_group_rule_id": "sgr-0ae480c1c6a954d83",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.project-1-SG-1",
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "SG-1-HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377254556:security-group-rule/sgr-0e76cf1eb7978e3b2",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0e76cf1eb7978e3b2",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fa6b16edfc1431b6",
            "security_group_rule_id": "sgr-0e76cf1eb7978e3b2",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.project-1-SG-1",
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "SG-1-SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377254556:security-group-rule/sgr-03f3ac9d28305958e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-03f3ac9d28305958e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0fa6b16edfc1431b6",
            "security_group_rule_id": "sgr-03f3ac9d28305958e",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.project-1-SG-1",
            "aws_vpc.project-1-vpc"
          ]
        }
      ]
    }
  ]
}